<resources>
    <string name="app_name" translatable="true">Prefeitura Interativa</string>
    <string name="str_tipo_usuario_cidadao_id" templateMergeStrategy="preserve" translatable="false">6b395be8-a7c1-4971-8dc0-afa04be63a00</string>
    <string name="str_emblema" translatable="true">Emblema do aplicativo em formato de maçã</string>
    <string name="str_hint_senha" translatable="true">INSIRA SUA SENHA</string>
    <string name="str_esqueceu_senha" translatable="true">Esqueci minha senha</string>
    <string name="str_vamos_comecar" translatable="true">Vamos começar…</string>
    <string name="str_entrar" translatable="true">Entrar</string>
    <string name="str_cadastrar" translatable="true">Cadastre-se aqui</string>
    <string name="str_conta_google" translatable="true">Entre com o Google</string>
    <string name="str_nome" translatable="true">NOME COMPLETO</string>
    <string name="str_senha_confirm" translatable="true">CONFIRME SUA SENHA</string>
    <string name="str_senha" translatable="true">ESCOLHA UMA SENHA</string>
    <string name="str_email" translatable="true">INSIRA SEU E-MAIL</string>
    <string name="str_cpf">INSIRA SEU CPF</string>
    <string name="str_continuar">Continuar</string>
    <string name="str_voltar">Voltar</string>
    <string name="str_tipo_problema">Selecione uma demanda</string>
    <string name="str_perfil">Meu Perfil</string>
    <string name="str_redefinir">Redefinir Senha</string>
    <string name="str_completar_cadastro">Complete seu cadastro</string>
    <string name="str_cadastrar_titulo">Junte-se a nós</string>
    <string name="str_atualizar">Atualizar</string>
    <string name="str_ou">Ou</string>
    <string name="str_label_cpf">CPF</string>
    <string name="str_label_email">E-MAIL</string>
    <string name="str_camera">Câmera</string>
    <string name="str_galeria">Galeria</string>
    <string name="str_sair">Sair</string>
    <string name="str_inicio">inicio</string>
    <string name="str_descricao">Descrição</string>
    <string name="str_cadastrar_demanda">Nova Demanda</string>
    <string name="str_imagens">Imagens</string>
    <string name="str_remover">Remover</string>
    <string name="str_adicionar">Adicionar</string>
    <string name="str_solicitacao_tipo">Selecione os tópicos relacionados com sua demanda.</string>
    <string name="str_topicos_selecionados">Tópicos Selecionados</string>
    <string name="str_zero">0</string>
    <string name="str_topicos_vazios">Selecione no menu acima, os tópicos relacionados com sua demanda.</string>
    <string name="str_marcadorNaoSelecionado">Marque no mapa a localização.</string>
    <string name="str_hint_mapa">Toque no mapa para selecionar a localização</string>
    <string name="str_marcadorSelecionado">Localização selecionada.</string>
    <string name="str_anonimo">Ocultar minha identidade.</string>
    <string name="str_rationale">Para prosseguir, autorize as seguintes permissões:</string>
    <string name="str_confirmar">OK</string>
    <string name="str_never_ask_imagens">Sem as permissões, não será possível anexar imagens, por favor, autorize-as.</string>
    <string name="str_error_camera">Falha ao capturar imagem. Se o erro persistir consulte o suporte do sistema</string>
    <string name="str_error_trocar_camera">Falha ao trocar a câmera. Se o erro persistir consulte o suporte do sistema</string>
    <string name="str_local_nao_informado">Você precisa marcar no mapa, o local onde ocorreu o problema.</string>
    <string name="str_never_ask_gps">Sem as permissões, não será possível usar seu GPS, por favor, autorize-as.</string>
    <string name="str_categoria_nao_selecionada">Você precisa selecionar uma categoria para a sua demanda.</string>
    <string name="str_sem_anexos_descricao">Você precisa nos informar o que ocorreu, ou inserir imagens.</string>
    <string name="str_titulo_localizacao">Localização \n Onde ocorreu?</string>
    <string name="str_titulo_detalhes">Detalhes \n O que aconteceu?</string>
    <string name="str_titulo_categorias">Categoria \n Sobre o que se trata?</string>
    <string name="str_carregando">Carregando…</string>
    <string name="str_cadastrando_demanda">Cadastrando Demanda…</string>
    <string name="str_erro_carregar_imagem">Falha ao carregar imagem. Consulte o suporte do sistema.</string>
    <string name="str_erro">Erro!</string>
    <string name="str_erro_internet_carregar_imagem">Você precisa de uma conexão com a internet para inserir uma imagem.</string>
    <string name="str_erro_internet_redefinir_senha">Você precisa de uma conexão com a internet para redefinir a senha.</string>
    <string name="str_erro_redefinir_Senha">Falha ao redefinir senha. Consulte o suporte do sistema.</string>
    <string name="str_erro_email_nao_cadastrado">O e-mail informado não pertence a nenhuma conta.</string>
    <string name="str_erro_internet_atualizar_perfil">Você precisa estar conectado com a internet para atualizar seu perfil.</string>
    <string name="str_erro_validar_email">Falha ao validar e-mail. Consulte o suporte do sistema.</string>
    <string name="str_clique_link_email">Clique no link enviado para seu e-mail para ativar a conta.</string>
    <string name="str_erro_email_cadastrado">Seu e-mail já está cadastrado.</string>
    <string name="str_erro_internet_cadastro">Você precisa de uma conexão com a internet para se registrar.</string>
    <string name="str_erro_login">Falha no login. Consulte o suporte do sistema.</string>
    <string name="str_erro_dados_invalidos">E-mail e/ou senha incorretos.</string>
    <string name="str_erro_internet_login">Você precisa estar conectado a internet para logar.</string>
    <string name="str_erro_cadastro">Falha no registro. Consulte o suporte do sistema.</string>
    <string name="str_solicitacao_em_andamento">Abertas</string>
    <string name="str_solicitacao_encerrada">Concluídas</string>
    <string name="str_minhas_demandas">Demandas Cadastradas</string>
    <string name="str_categoria_hint">Esta secretaria é responsável por:</string>
    <string name="str_dados_solicitacao">Informações</string>
    <string name="str_tramitacao">Tramitação</string>
    <string name="str_local">localização</string>
    <string name="str_departamentos">Secretarias</string>
    <string name="str_visualizar_demanda">Visualizar Solicitação</string>
    <string name="str_erro_limite_topicos">Em cada solicitação, você pode marcar apenas 10 tópicos.</string>
    <string name="str_erro_apenas_topicos_secretaria">Em cada solicitação, você pode marcar apenas os tópicos relacionados a uma única secretaria.</string>
    <string name="str_carregando_cadastro">Cadastrando…</string>
    <string name="str_sucesso">Sucesso!</string>
    <string name="str_cadastro_completo">Cadastro completo.</string>
    <string name="str_clique_link_redefinir_senha">Clique no link enviado para seu e-mail para redefinir sua senha.</string>
    <string name="str_gravando_alteracoes">Gravando alterações…</string>
    <string name="str_perfil_atualizado">Perfil atualizado com êxito!</string>
    <string name="str_cancelar">Cancelar</string>
    <string name="str_url_map_search">https://www.google.com/maps/search/</string>
    <string name="str_erro_db_permissao_gravar">Você não possui permissão para gravar nesta coleção.</string>
    <string name="str_falha_inserir_db">Falha na gravação, consulte o suporte do sistema.</string>
    <string name="str_falha_remover_db">Falha ao remover dado, consulte o suporte do sistema.</string>
    <string name="str_erro_db_permissao_remover">Você não possui permissão para remover dados nesta coleção.</string>
    <string name="str_erro_db_permissao_consultar">Você não possui permissão para acessar esta coleção.</string>
    <string name="str_falha_consultar_db">Falha na consulta ao banco de dados, consulte o suporte do sistema.</string>
    <string name="str_helper_anonimo">Somente você consegue ver o sua identificação.</string>
    <string name="str_demanda_cadastrada">DEMANDA CADASTRADA.</string>
    <string name="str_nenhuma_imagem">Nenhuma imagem inserida.</string>
    <string name="str_aguardando_conexao">Aguardando Conexão</string>
    <string name="str_modo_offline">Modo Offline - Utilizando dados em cache.</string>
    <string name="str_carregando_demandas">Enviando Solicitações pendentes…</string>
    <string name="str_avaliar">Avaliar</string>
    <string name="str_comentario_avaliacao">Comentários Gerais</string>
    <string name="str_avaliacao_atendida">Minha demanda foi solucionada.</string>
    <string name="str_avaliacao">Avaliação</string>
    <string name="str_avaliacao_concluida">Avaliação efetuda. Agradecemos pela sua opinião!</string>
    <string name="str_solicitacao_cadastrada_offline">Sua solicitação será enviada para o sistema quando você estiver conectado.</string>
    <string name="str_atencao">Atenção!</string>
    <string name="str_dica_modo_offline">Você poderá continuar cadastrando solicitações para enviar quando tiver internet!</string>
    <string name="str_avaliacao_nota">Qual a sua nota para o atendimento?</string>
    <string name="str_erro_limite_imagens">Você pode inserir no máximo três imagens.</string>
    <string name="str_topicos">Categorias</string>
    <string name="default_notification_client_id">fcm_default_channel</string>
    <string name="str_autenticando">Autenticando…</string>
    <string name="str_erro_avaliacao_vazia">Por favor, informe uma nota para o atendimento.</string>
    <string name="str_avisos">Avisos</string>
    <string name="str_nenhum_aviso">Nenhum aviso pendente.</string>
    <string name="str_solicitacoes_abertas">Solicitações Abertas</string>
    <string name="str_solicitacoes_concluidas">Solicitacoes Concluidas</string>
    <string name="str_usuario_desabilitado">Seu usuário foi desativado. Consulte a sua prefeitura para maiores informações.</string>
    <string name="str_falha_login_google">Falha ao associar conta Google. Consulte o suporte do sistema.</string>
    <string name="str_ola">Bem vindo, </string>
    <string name="str_nome_anonimo">(Anônimo)</string>
    <string name="str_cpf_invalido">Seu CPF está inválido.</string>
    <string name="str_avaliacao_cadastrada">Avaliação cadastrada em :</string>
    <string name="str_marcador_posicionado">Marcador Posicionado</string>
</resources>
