<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/float_transparent"
        android:clickable="false"
        android:gravity="center"
        android:padding="@dimen/espaco_muito_pequeno"
        android:text="@string/str_minhas_demandas"
        android:textAllCaps="false"
        android:textColor="@color/ms_white"
        android:textSize="@dimen/texto_botao"
        android:transitionName="splash_transition" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_solicitacoes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/componente_muito_pequeno"
        app:tabBackground="@color/whiteFA"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/blackWhite"
        app:tabTextColor="@color/blackWhite">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_solicitacao_em_andamento" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_solicitacao_encerrada" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager_solicitacoes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>