<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".controller.ActivitySolicitacaoCadastrar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_quadrado_irregular_vermelho"
            android:gravity="center"
            android:padding="@dimen/espaco_medio">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_cadastrar_demanda"
                android:textColor="@color/ms_white"
                android:textSize="@dimen/texto_botao"
                android:transitionName="splash_transition" />
        </LinearLayout>
    </LinearLayout>

    <com.stepstone.stepper.StepperLayout
        android:id="@+id/stepperLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:ms_backButtonColor="@color/ms_white"
        app:ms_backButtonText="@string/str_voltar"
        app:ms_activeStepColor="@color/colorOrange"
        app:ms_stepperLayoutTheme="@style/MyStepperLayoutTheme"
        app:ms_bottomNavigationBackground="@color/float_transparent"
        app:ms_completeButtonColor="@color/white"
        app:ms_completeButtonText="Enviar"
        app:ms_nextButtonColor="@color/ms_white"
        app:ms_nextButtonText="@string/str_continuar"
        app:ms_stepperType="tabs" />
</LinearLayout>
