<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteFA"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_quadrado_irregular_vermelho"
            android:gravity="center"
            android:padding="@dimen/espaco_medio">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_visualizar_demanda"
                android:textColor="@color/ms_white"
                android:textSize="@dimen/texto_botao"
                android:transitionName="splash_transition" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_solicitacao"
        android:transitionName="solicitacao_transition"
        android:layout_width="match_parent"
        android:layout_height="@dimen/componente_muito_pequeno"
        app:tabBackground="@color/whiteFA"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/blackWhite"
        app:tabPadding="@dimen/espaco_pequeno"
        app:tabTextColor="@color/blackWhite">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dados_solicitacao" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_tramitacao" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager_solicitacao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>