<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ActivityLogin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_app"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/espaco_pequeno"
            android:background="@drawable/shape_quadrado_arr_branco"
            android:contentDescription="@string/str_emblema"
            android:elevation="5dp"
            android:src="@mipmap/ic_maca"
            android:tint="@color/colorRed"
            android:transitionName="splash_transition" />

        <LinearLayout
            android:id="@+id/l_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_app"
            android:background="@drawable/shape_quadrado_arr_branco"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/espaco_pequeno">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/espaco_medio"
                android:gravity="center"
                android:text="@string/str_vamos_comecar"
                android:textAllCaps="true"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/texto_grande"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edl_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/espaco_muito_pequeno"
                android:hint="@string/str_email"
                app:boxStrokeColor="@color/colorDarkOrange"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorDarkOrange"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorDarkOrange"
                app:startIconContentDescription="@string/str_email"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/colorDarkOrange">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDarkOrange"
                    android:textSize="@dimen/texto_pequeno" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edl_senha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/espaco_muito_pequeno"
                android:hint="@string/str_hint_senha"
                app:boxStrokeColor="@color/colorDarkOrange"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorDarkOrange"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorDarkOrange"
                app:startIconContentDescription="@string/str_hint_senha"
                app:startIconDrawable="@drawable/ic_senha"
                app:startIconTint="@color/colorDarkOrange">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDarkOrange"
                    android:textSize="@dimen/texto_pequeno" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_recuperarSenha"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/espaco_muito_pequeno"
                android:backgroundTint="@color/white"
                android:text="@string/str_esqueceu_senha"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/texto_pequeno"
                app:icon="@drawable/ic_senha"
                app:iconGravity="start"
                app:iconTint="@color/colorPink" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/espaco_pequeno"
                android:background="@drawable/shape_quadrado_arr_vermelho"
                android:elevation="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_login"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:icon="@drawable/ic_proximo"
                    android:textColor="@color/ms_white"
                    app:iconGravity="end"
                    android:text="@string/str_entrar"
                    app:iconTint="@color/ms_white"
                    android:textSize="@dimen/texto_normal" />
            </RelativeLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_cadastrar"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/espaco_pequeno"
                android:text="@string/str_cadastrar"
                android:textAllCaps="true"
                android:textColor="@color/colorOrangeWhite"
                android:textSize="@dimen/texto_pequeno"
                android:textStyle="bold"
                app:icon="@drawable/ic_usuario"
                app:iconGravity="start"
                app:iconTint="@color/colorOrange" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/l_login"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_loginGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/espaco_muito_pequeno"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:gravity="center"
                android:padding="@dimen/espaco_pequeno"
                android:text="@string/str_conta_google"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkOrange"
                android:textSize="@dimen/texto_pequeno"
                android:transitionName="base_transition"
                app:cornerRadius="@dimen/raio_circulo_medio"
                app:icon="@drawable/ic_google"
                app:iconTintMode="multiply" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
